package heig.mcr.visitor.board;

public interface Interactor {

    void interactWith(Interactable other);
}
